--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -66,7 +66,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
-
+        @include mobile {
+          height: 47px;
+        }
         img {
           &.left,
           &.right {
@@ -102,7 +104,9 @@
         align-items: center;
         flex-direction: column;
         justify-content: center;
-
+        @include mobile {
+          height: 48px;
+        }
         h3 {
           margin-bottom: 5px;
 
