--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -11,7 +11,7 @@
 
     @include mobile {
       font-size: 20px;
-      padding-top: 4px;
+      height: 35px;
     }
   }
 
@@ -52,7 +52,6 @@
       color: white;
       position: relative;
       transition: all 0.5s ease;
-      cursor: pointer;
       overflow-y: hidden;
 
       @include mobile {
@@ -60,27 +59,51 @@
         height: 120px;
       }
 
+      .itemContainer {
+        display: flex;
+        justify-content: center;
+        .itemContent {
+          display: none;
+
+          .icons {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            padding-top: 10px;
+
+            svg {
+              cursor: pointer;
+            }
+          }
+        }
+      }
       h3 {
-        position: absolute;
         font-size: 20px;
         @include mobile {
+          font-size: 14px;
           padding: 0 15px;
         }
       }
 
       img {
-        width: 100%;
-        // height: 100%;
+        width: max-content;
         object-fit: cover;
         z-index: 1;
       }
 
       &:hover {
         background-color: $mainColor;
+        background-image: none !important;
+        color: #fff;
         img {
           opacity: 0.2;
           z-index: 0;
         }
+      }
+
+      &:hover .itemContent {
+        display: block;
       }
     }
   }
