--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -30,11 +30,16 @@
 
       .itemContainer {
         display: flex;
+        gap: 15px;
         align-items: center;
         margin-left: 30px;
 
         @include mobile {
           display: none;
+        }
+
+        a {
+          color: inherit;
         }
 
         .icon {
